--- a/receptive-fields/Padding Info.ipynb
+++ b/receptive-fields/Padding Info.ipynb
@@ -34,7 +34,6 @@
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
-    "\n",
     "# Initialize a random tensor\n",
     "x = torch.randn(1, 1, 5, 5)\n",
     "x"
@@ -82,7 +81,7 @@
    "id": "8f14ee62",
    "metadata": {},
    "source": [
-    "### <span style=\"color:#3bbfa0; font-size:1.2em;\">*1. Constant Padding:*</span>"
+    "### <span style=\"color:#3bbfa0; font-size:1.2em;\">*1.1 Constant Padding:*</span>"
    ]
   },
   {
@@ -135,7 +134,7 @@
    "id": "edae023c",
    "metadata": {},
    "source": [
-    "### <span style=\"color:#3bbfa0; font-size:1.2em;\">*2. Reflection Padding:*</span>\n",
+    "### <span style=\"color:#3bbfa0; font-size:1.2em;\">*1.2 Reflection Padding:*</span>\n",
     "\n",
     "```For example, let's say we have a simple one-dimensional tensor [1, 2, 3] and we want to \n",
     "apply reflection padding of size 2. The reflected tensor would look like this: [3, 2, 1, 2, 3, 2, 1].```"
@@ -184,7 +183,7 @@
    "id": "3b56b3f1",
    "metadata": {},
    "source": [
-    "### <span style=\"color:#3bbfa0; font-size:1.2em;\">*3. Replication Padding:*</span>\n",
+    "### <span style=\"color:#3bbfa0; font-size:1.2em;\">*1.3 Replication Padding:*</span>\n",
     "\n",
     "```For example, if we have a simple one-dimensional tensor [1, 2, 3] and we want to apply\n",
     "replication padding of size 2, the padded tensor would look like this: [1, 1, 1, 2, 3, 3, 3]. \n",
@@ -236,6 +235,108 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dec440d0",
+   "metadata": {},
+   "source": [
+    "<br><br><br><br><br><br>\n",
+    "\n",
+    "### <span style=\"color:#3bbfa0; font-size:1.2em;\">*2.1 Receptive Fields:*</span>\n",
+    "____\n",
+    "\n",
+    "\n",
+    "1. Fawaz, H. I., Lucas, B., Forestier, G., Pelletier, C., Schmidt, D. F., Weber, J., Webb, G. I., Idoumghar, \n",
+    "L., Muller, P.-A., & Petitjean, F. (2019). InceptionTime: Finding AlexNet for Time Series Classification. arXiv. https://doi.org/10.48550/ARXIV.1909.04939\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d448a3d",
+   "metadata": {},
+   "source": [
+    "<img src=\"./asset/img/paper.png\" width=\"800\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b179a03b",
+   "metadata": {},
+   "source": [
+    "<img src=\"./asset/img/rf.png\" width=\"800\">\n",
+    "<br><br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f7bf28f",
+   "metadata": {},
+   "source": [
+    "<br><br><br>\n",
+    "<br><br><br>\n",
+    "\n",
+    "### <span style=\"color:#3bbfa0; font-size:1.2em;\">*2.2 Receptive Fields:*</span>\n",
+    "\n",
+    "\n",
+    "2. Luo, W., Li, Y., Urtasun, R., & Zemel, R. (2017). Understanding the Effective Receptive Field in Deep Convolutional Neural Networks (Version 2). arXiv. https://doi.org/10.48550/ARXIV.1701.04128"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e74d0981",
+   "metadata": {},
+   "source": [
+    "<img src=\"./asset/img/paper2.png\" width=\"970\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81d11cd5",
+   "metadata": {},
+   "source": [
+    "1. **Increasing the Receptive Field Size**: The authors suggest that subsampling and dilated convolutions can be effective ways to increase the receptive field size quickly. This can help to ensure that the network is able to capture more contextual information from the input.\n",
+    "\n",
+    "2. **Modifying Network Architecture**: The authors also suggest that modifications to the network architecture, such as the use of skip connections, can help to control the size of the ERF. They note that skip connections tend to make the ERF smaller, which can be beneficial in certain contexts.\n",
+    "\n",
+    "3. **Adjusting Training Techniques**: The authors observed that the ERF changes during the training of deep CNNs on real datasets. They found that as the network learns, the ERF gets bigger, and at the end of training, it is significantly larger than the initial ERF. This suggests that adjusting training techniques could also be a way to manage the size of the ERF.\n",
+    "\n",
+    "4. **Balancing the Receptive Field and Resolution**: The authors suggest that there is a trade-off between the size of the receptive field and the resolution of the feature maps. They propose that this trade-off should be carefully considered when designing network architectures and training techniques.\n",
+    "\n",
+    "5. **Understanding the Impact of Nonlinear Activations**: The authors also discuss the effect of nonlinear activations on the ERF. Understanding these effects can help to design more effective network architectures and training techniques."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c345c6d",
+   "metadata": {},
+   "source": [
+    "<img src=\"./asset/img/activations.png\" width=\"800\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88b23d45",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5389f94e",
+   "metadata": {},
+   "source": [
+    "<img src=\"./asset/img/c10.png\" width=\"800\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02a6bcf0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -254,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
